:art: fix: update height of transatlatica logo for better alignment

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -120,7 +120,7 @@
 
 #transatlatica_logo {
   width: 140px;
-  height: 121px;
+  height: 140px;
 }
 //responsividade
 @media screen and (max-width: 768px) {
